# mandelbrot

./: Cargo.toml  LICENSE  README.md
src/: main.rs  mandelbrot.rs  render.rs
